--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Address</h4>
-          <address>2329 Foote Ave Suite 1<br>Jamestown, NY 14701</address>
+          <address>2329 Foote Ave Suite 1<br>NYC, NY 14701</address>
         </div>
       </div>
       <hr class="footer__horizontal-line">
