--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Need a plumber? (347) 484-8860 – Let us connect you with the best local plumbers who service all areas in and around Jamestown.">
+  <meta name="description" content="Need a plumber? (347) 484-8860 – Let us connect you with the best local plumbers who service all areas in and around NYC boroughs.">
   <title>All Plumbing NYC – Fast, Reliable, & Affordable Services</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link fetchpriority="high" rel="preload" href="./assets/img/photos/plumbing-hero-blueprint-640w.JPG" as="image">
@@ -64,7 +64,7 @@
         <div class="home__overlay">
           <div class="home__container container">
             <h1 class="home__title slide-down">All Plumbing NYC</h1>
-            <p class="home__subheading slide-left">We connect you with qualified local plumbers in Jamestown and the surrounding areas.</p>
+            <p class="home__subheading slide-left">We connect you with qualified local plumbers in NYC boroughs and the surrounding areas.</p>
             <div class="home__button slide-up">
               <a class="button" href="tel:+13474848860">Give us a Call</a>
               <a class="button" href="#contact">Send an Email</a>
