--- a/terms.html
+++ b/terms.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Plumbing Jamestown – Terms & Conditions">
+  <meta name="description" content="All Plumbing NYC – Terms & Conditions">
   <meta name="author" content="elemis">
-  <title>Plumbing Jamestown – Terms & Conditions</title>
+  <title>All Plumbing NYC – Terms & Conditions</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="./assets/js/perf.js"></script>
@@ -30,7 +30,7 @@
         <div class="navbar__nav-container">
           <div class="navbar__nav">
             <div class="offcanvas-header">
-              <h3 class="offcanvas-title">Plumbing<br>Jamestown</h3>
+              <h3 class="offcanvas-title">ALl Plumbing<br>NYC</h3>
               <button class="offcanvas-close">✕</button>
             </div>
             <ul class="navbar__nav-links">
