--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Plumbing Jamestown – Privacy Policy">
+  <meta name="description" content="All Plumbing NYC – Privacy Policy">
   <meta name="author" content="elemis">
   <title>All Plumbing NYC – Privacy Policy</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
