--- a/thank-you.html
+++ b/thank-you.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Plumbing Jamestown – Thank You">
+  <meta name="description" content="All Plumbing NYC – Thank You">
   <meta name="author" content="elemis">
   <title>All Plumbing NYC – Thank You</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
