--- a/index.html
+++ b/index.html
@@ -277,10 +277,11 @@
                 <label class="faq__accordion-label" for="accordion-2"><span>Which areas do you service?</span></label>
                 <div class="faq__accordion-text">
                   <p>
-                    We service all of NYC and the surrounding areas including East New Jersey, Lakewood, Elmhurst, Celoron, Ellicott, Falconer, Frewsberg, Panama, Sinclairville, and Randolph.
+                    We service all of NYC and the surrounding areas including East New Jersey.
                   </p>
                   <p>
-                    We also service Chautauqua County and Erie County. <a href="tel:+13474848860">Give us a call</a> to see if we service your area!
+                    <!-- We also service Chautauqua County and Erie County. <a href="tel:+13474848860">Give us a call</a> to see if we service your area! -->
+                    <a href="tel:+13474848860">Give us a call</a> to see if we service your area!
                   </p> 
                 </div>
               </div>
