--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Plumber In Fullerton – 404 Page Not Found">
+  <meta name="description" content="Plumber In NYC – 404 Page Not Found">
   <meta name="author" content="elemis">
   <title>All Plumbing NYC – 404 Page Not Found</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
