--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,6 +17,16 @@
   </script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCZWCHZ3YM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LCZWCHZ3YM');
+</script>
+
 <body>
   <div class="page-loader" importance="high"></div>
   <div class="content__wrapper">
