--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Address</h4>
-          <address>34st<br>New York, NY 10007</address>
+          <address>249 E53rd<br>New York, NY 10022</address>
         </div>
       </div>
       <hr class="footer__horizontal-line">
