--- a/terms.html
+++ b/terms.html
@@ -152,7 +152,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Address</h4>
-          <address>110 S Balcom Ave<br>Fullerton, CA 92833</address>
+          <address>249 E53rd<br>New York, NY 10022</address>
         </div>
       </div>
       <hr class="footer__horizontal-line">
