--- a/404.html
+++ b/404.html
@@ -108,7 +108,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Address</h4>
-          <address>2329 Foote Ave Suite 1<br>NYC, NY 14701</address>
+          <address>249 E53rd<br>New York, NY 10022</address>
         </div>
       </div>
       <hr class="footer__horizontal-line">
