--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Need a plumber? (347) 484-8860 – Let us connect you with the best local plumbers who service all areas in and around NYC boroughs.">
-  <title>All Plumbing NYC – Fast, Reliable, & Affordable Services</title>
+  <title>Plumbing NYC – Fast, Reliable, & Affordable Services</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link fetchpriority="high" rel="preload" href="./assets/img/photos/plumbing-hero-blueprint-640w.JPG" as="image">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -40,7 +40,7 @@
         <div class="navbar__nav-container">
           <div class="navbar__nav">
             <div class="offcanvas-header">
-              <h3 class="offcanvas-title">All Plumbing<br>NYC</h3>
+              <h3 class="offcanvas-title">Plumbing<br>NYC</h3>
               <button class="offcanvas-close">✕</button>
             </div>
             <ul class="navbar__nav-links">
@@ -73,8 +73,8 @@
       <div class="home__background-img">
         <div class="home__overlay">
           <div class="home__container container">
-            <h1 class="home__title slide-down">All Plumbing NYC</h1>
-            <p class="home__subheading slide-left">We connect you with qualified local plumbers in NYC boroughs and the surrounding areas.</p>
+            <h1 class="home__title slide-down">Plumbing NYC</h1>
+            <p class="home__subheading slide-left">Plumbing NYC offers top-notch plumbing services across the five boroughs, providing quick, reliable, and efficient solutions for both residential and commercial properties.</p>
             <div class="home__button slide-up">
               <a class="button" href="tel:+13474848860">Give us a Call</a>
               <a class="button" href="#contact">Send an Email</a>
@@ -421,7 +421,10 @@
               <p class="contact__text">Have any questions? Reach out to us through this contact form and we will get back to you shortly.</p>
             </div>
             <div class="contact__column">
-              <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST">
+              <!-- form.123formbuilder.com script begins here -->
+<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6681533.js" data-role="form" data-default-width="800px" data-custom-vars="hasEmbedFormStyle=1"></script>
+<!-- form.123formbuilder.com script ends here -->
+              <!-- <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST">
                 <div class="contact__form-field form-float">
                   <input type="text" id="name" name="name" required="required" aria-label="name">
                   <label for="name">Name *</label>
@@ -439,7 +442,7 @@
                   <input type="hidden" name="_captcha" value="false">
                 </div>
                 <button class="contact__submit-button button" type="submit">Send Message</button>
-              </form>
+              </form> -->
             </div>
           </div>
         </div>
@@ -473,7 +476,7 @@
       </div>
       <hr class="footer__horizontal-line">
       <div class="footer__copyright">
-        <p>© 2023 All Plumbing NYC Inc. All rights reserved.</p>  
+        <p>© 2023 Plumbing NYC Inc. All rights reserved.</p>  
       </div>
     </div>
   </footer>
