--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
             <div class="contact__column">
               <!-- form.123formbuilder.com script begins here -->
-<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6681533.js" data-role="form" data-default-width="800px" data-custom-vars="hasEmbedFormStyle=1"></script>
+<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6681533.js" data-role="form" data-default-width="800px" data-custom-vars="hasEmbedFormStyle=1&hasTransparentBg=1"></script>
 <!-- form.123formbuilder.com script ends here -->
               <!-- <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST">
                 <div class="contact__form-field form-float">
