--- a/index.html
+++ b/index.html
@@ -421,10 +421,8 @@
               <p class="contact__text">Have any questions? Reach out to us through this contact form and we will get back to you shortly.</p>
             </div>
             <div class="contact__column">
-              <!-- form.123formbuilder.com script begins here -->
-<script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6681543.js" data-role="form" data-default-width="800px" data-custom-vars="hasEmbedFormStyle=1&hasTransparentBg=1"></script>
-<!-- form.123formbuilder.com script ends here -->
-              <!-- <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST">
+              <!-- <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST"> -->
+              <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST" />
                 <div class="contact__form-field form-float">
                   <input type="text" id="name" name="name" required="required" aria-label="name">
                   <label for="name">Name *</label>
@@ -442,7 +440,7 @@
                   <input type="hidden" name="_captcha" value="false">
                 </div>
                 <button class="contact__submit-button button" type="submit">Send Message</button>
-              </form> -->
+              </form>
             </div>
           </div>
         </div>
