--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
             <div class="contact__column">
               <!-- <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST"> -->
-              <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST" />
+              <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST" >
                 <div class="contact__form-field form-float">
                   <input type="text" id="name" name="name" required="required" aria-label="name">
                   <label for="name">Name *</label>
